<resources>
    <string name="app_name">findout</string>
    <string name="location_title">Location</string>
    <string name="location_desc"> Our App collects and monitors the information about the location of your device to provide timely notifications about availability of services in your location.</string>
    <string name="agree_button">Agree and Continue</string>
    <string name="verify">Verify</string>
    <string name="ten_digit_phone_number">10 digit mobile number</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="pincode_hint">Enter Pincode</string>
    <string name="login">Login</string>
    <string name="terms">I agreed to Above permissions List</string>
    <string name="enter_your_mobile_number_to_proceed">Enter your mobile number to proceed</string>
    <string name="signIn">SignIn</string>
    <string name="signUp">SignUp</string>
    <string name="verifyOtp">VerifyOtp</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="name_hint">Enter you Name</string>

</resources>