<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvLabelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:text="@string/login"
        android:textColor="@color/findout_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:fontFamily="sans-serif"/>


    <TextView
        android:id="@+id/tvLabelMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/enter_your_mobile_number_to_proceed"
        android:textColor="@color/findout_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelHeader"
        app:fontFamily="sans-serif" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobileNo"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/ten_digit_phone_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelMobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agree"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/findout_color"
        android:text="@string/verify"
        app:layout_constraintTop_toBottomOf="@+id/tilMobileNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>