<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/companyName"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLoginLogo"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/findout_color"
        app:fontFamily="sans-serif"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/findout_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/singUp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/findout_color"
        android:text="@string/signUp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/companyName"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>