<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:max="100"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLabelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:text="@string/login"
        android:textColor="@color/findout_color"
        android:textSize="16sp"
        app:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLabelMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/verify_mobile_number"
        android:textColor="@color/findout_color"
        android:textSize="18sp"
        app:fontFamily="More Fonts..."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelHeader" />




    <com.findout.utils.view.OtpEditText
        android:id="@+id/verifyLoginOtpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:itemCount="4"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelMobile"
        app:lineColor="@android:color/black"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/findout_color"
        android:text="@string/verifyOtp"
        app:layout_constraintTop_toBottomOf="@+id/verifyLoginOtpView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>